feat: Use tag for selecting instrument note buttons
... instead of tooltip, which is only available on Android 8+. This way the app should still work on older versions of Android, just without the tooltip

--- a/app/src/main/res/layout/instrument_buttons.xml
+++ b/app/src/main/res/layout/instrument_buttons.xml
@@ -14,6 +14,7 @@
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:onClick="changePitchPipeInstrument"
+        android:tag="@string/button_tag_guitar"
         android:tooltipText="@string/button_tag_guitar"
         app:cornerRadius="@dimen/button_corner_radius"
         app:icon="@drawable/ic_guitar_icon"
@@ -29,6 +30,7 @@
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:onClick="changePitchPipeInstrument"
+        android:tag="@string/button_tag_ukulele"
         android:tooltipText="@string/button_tag_ukulele"
         app:cornerRadius="@dimen/button_corner_radius"
         app:icon="@drawable/ic_ukulele_icon"
@@ -44,6 +46,7 @@
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:onClick="changePitchPipeInstrument"
+        android:tag="@string/button_tag_mandolin"
         android:tooltipText="@string/button_tag_mandolin"
         app:cornerRadius="@dimen/button_corner_radius"
         app:icon="@drawable/ic_mandolin_icon"
@@ -59,6 +62,7 @@
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:onClick="changePitchPipeInstrument"
+        android:tag="@string/button_tag_banjo"
         android:tooltipText="@string/button_tag_banjo"
         app:cornerRadius="@dimen/button_corner_radius"
         app:icon="@drawable/ic_banjo_icon"
