--- a/app/src/main/res/layout/instrument_buttons.xml
+++ b/app/src/main/res/layout/instrument_buttons.xml
@@ -8,8 +8,8 @@
     -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/instrument_button1"
-        android:layout_width="@dimen/instrument_button_height_width"
-        android:layout_height="@dimen/instrument_button_height_width"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_margin="@dimen/button_margin"
         android:insetTop="0dp"
         android:insetBottom="0dp"
@@ -20,12 +20,12 @@
         app:icon="@drawable/ic_guitar_icon"
         app:iconGravity="textStart"
         app:iconPadding="0dp"
-        app:iconSize="@dimen/instrument_button_icon_size" />
+        app:iconSize="0dp" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/instrument_button2"
-        android:layout_width="@dimen/instrument_button_height_width"
-        android:layout_height="@dimen/instrument_button_height_width"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_margin="@dimen/button_margin"
         android:insetTop="0dp"
         android:insetBottom="0dp"
@@ -36,12 +36,12 @@
         app:icon="@drawable/ic_ukulele_icon"
         app:iconGravity="textStart"
         app:iconPadding="0dp"
-        app:iconSize="@dimen/instrument_button_icon_size" />
+        app:iconSize="0dp" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/instrument_button3"
-        android:layout_width="@dimen/instrument_button_height_width"
-        android:layout_height="@dimen/instrument_button_height_width"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_margin="@dimen/button_margin"
         android:insetTop="0dp"
         android:insetBottom="0dp"
@@ -52,12 +52,12 @@
         app:icon="@drawable/ic_mandolin_icon"
         app:iconGravity="textStart"
         app:iconPadding="0dp"
-        app:iconSize="@dimen/instrument_button_icon_size" />
+        app:iconSize="0dp" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/instrument_button4"
-        android:layout_width="@dimen/instrument_button_height_width"
-        android:layout_height="@dimen/instrument_button_height_width"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_margin="@dimen/button_margin"
         android:insetTop="0dp"
         android:insetBottom="0dp"
@@ -68,5 +68,5 @@
         app:icon="@drawable/ic_banjo_icon"
         app:iconGravity="textStart"
         app:iconPadding="0dp"
-        app:iconSize="@dimen/instrument_button_icon_size" />
+        app:iconSize="0dp" />
 </merge>
