feat: Stop note when same button is pressed
Now that notes are playing continuously, we need a way to stop the note

--- a/app/src/main/res/layout/note_buttons_ukulele.xml
+++ b/app/src/main/res/layout/note_buttons_ukulele.xml
@@ -11,7 +11,7 @@
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:onClick="playPitchPipeNote"
+        android:onClick="playOrStopNote"
         android:tag="67"
         android:text="@string/note_G"
         app:cornerRadius="@dimen/button_corner_radius"
@@ -25,7 +25,7 @@
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:onClick="playPitchPipeNote"
+        android:onClick="playOrStopNote"
         android:tag="60"
         android:text="@string/note_C"
         app:cornerRadius="@dimen/button_corner_radius"
@@ -39,7 +39,7 @@
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:onClick="playPitchPipeNote"
+        android:onClick="playOrStopNote"
         android:tag="64"
         android:text="@string/note_E"
         app:cornerRadius="@dimen/button_corner_radius"
@@ -53,7 +53,7 @@
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:onClick="playPitchPipeNote"
+        android:onClick="playOrStopNote"
         android:tag="69"
         android:text="@string/note_A"
         app:cornerRadius="@dimen/button_corner_radius"
