--- a/app/src/main/res/layout/note_buttons_banjo.xml
+++ b/app/src/main/res/layout/note_buttons_banjo.xml
@@ -11,7 +11,7 @@
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:onClick="playPitchPipeNote"
+        android:onClick="playOrStopNote"
         android:tag="67"
         android:text="@string/note_G"
         app:cornerRadius="@dimen/button_corner_radius"
@@ -25,7 +25,7 @@
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:onClick="playPitchPipeNote"
+        android:onClick="playOrStopNote"
         android:tag="50"
         android:text="@string/note_D"
         app:cornerRadius="@dimen/button_corner_radius"
@@ -39,7 +39,7 @@
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:onClick="playPitchPipeNote"
+        android:onClick="playOrStopNote"
         android:tag="55"
         android:text="@string/note_G"
         app:cornerRadius="@dimen/button_corner_radius"
@@ -53,7 +53,7 @@
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:onClick="playPitchPipeNote"
+        android:onClick="playOrStopNote"
         android:tag="59"
         android:text="@string/note_B"
         app:cornerRadius="@dimen/button_corner_radius"
@@ -67,7 +67,7 @@
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:onClick="playPitchPipeNote"
+        android:onClick="playOrStopNote"
         android:tag="62"
         android:text="@string/note_D"
         app:cornerRadius="@dimen/button_corner_radius"
